Fix response format, add test case
