# decosjoin/api/decosjoin/decosjoin_connection.py
@@ -119,12 +119,12 @@ class DecosJoinConnection:
                     {"name": "identifier", "from": 'mark', "parser": to_string},
                     {"name": "caseType", "from": 'text45', "parser": to_string},
                     {"name": "dateFrom", "from": 'date6', "parser": to_date},
-                    {"name": "dateEndInclusive", "from": 'date7', "parser": to_date},
+                    {"name": "dateEnd", "from": 'date7', "parser": to_date},
                     {"name": "timeStart", "from": 'text10', "parser": to_time},
                     {"name": "timeEnd", "from": 'text13', "parser": to_time},
                     {"name": "kenteken", "from": 'text9', "parser": to_string},
                     {"name": "location", "from": 'text6', "parser": to_string},
-                    {"name": "dateRequest", "from": "document_date", "parser": to_datetime},
+                    {"name": "dateRequest", "from": "document_date", "parser": to_date},
                     {"name": "decision", "from": "dfunction", "parser": to_decision},
                     {"name": "dateDecision", "from": "date5", "parser": to_date},  # datum afhandeling?
                 ]
@@ -134,8 +134,8 @@ class DecosJoinConnection:
                 new_zaak['documentsUrl'] = f"/api/decosjoin/listdocuments/{encrypt(zaak['key'], user_identifier)}"
 
                 # if end date is not defined, its the same as date start
-                if not new_zaak['dateEndInclusive']:
-                    new_zaak['dateEndInclusive'] = new_zaak['dateFrom']
+                if not new_zaak['dateEnd']:
+                    new_zaak['dateEnd'] = new_zaak['dateFrom']
 
                 # if date range is within now, it is current
                 if _is_current(new_zaak):
@@ -324,8 +324,8 @@ def _is_current(zaak):
     # date end
     if zaak.get('dateEnd'):
         end = to_datetime(zaak['dateEnd'])
-    elif zaak.get('dateEndInclusive'):
-        end = to_datetime(zaak['dateEndInclusive'])
+    elif zaak.get('dateEnd'):
+        end = to_datetime(zaak['dateEnd'])
         end = (end + relativedelta(days=1)) - relativedelta(seconds=1)
     else:
         return False
